--- a/src/Pages/components/assets/styles/Footer.scss
+++ b/src/Pages/components/assets/styles/Footer.scss
@@ -2,4 +2,8 @@ footer {
   margin-top: 250px;
   height: 8vh;
   background-color: #020406;
+  margin-bottom: 0;
+  p {
+    margin-bottom: 0;
+  }
 }
