--- a/src/Pages/components/assets/styles/Header.scss
+++ b/src/Pages/components/assets/styles/Header.scss
@@ -1,4 +1,5 @@
 @import './typography.css';
+$blue: #03091f;
 .header-slant-bg {
   position: absolute;
   top: 0;
@@ -7,7 +8,7 @@
   left: 0;
   width: 100%;
   height: 80%;
-  background: #03091f;
+  background: $blue;
   transform: skewY(-12deg);
   transform-origin: top left;
 }
@@ -48,6 +49,7 @@ header {
     background-repeat: no-repeat;
     background-position: center center;
     min-height: 75vh;
+    margin-right: 3vw;
   }
 }
 
