--- a/src/Pages/components/assets/styles/RegistrationForm.scss
+++ b/src/Pages/components/assets/styles/RegistrationForm.scss
@@ -1,9 +1,80 @@
+$color: #03091f;
 .register-wrap {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 20vh;
+}
+
+h1,
+input::-webkit-input-placeholder,
+button {
+  font-family: 'roboto', sans-serif;
+  transition: all 0.3s ease-in-out;
+}
+
+form {
+  background-color: #eee;
+  box-sizing: border-box;
+  width: 30vw;
+  margin: 100px auto 0;
+  box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.2);
+  padding-bottom: 40px;
+  border-radius: 10px;
   h1 {
-    color: black;
+    box-sizing: border-box;
+    padding: 20px;
+    height: 100px;
+    width: 100%;
+    font-size: 36px;
+    background: lighten($color, 4%);
+    color: #eee;
+    line-height: 150%;
+    border-radius: 3px 3px 0 0;
+    box-shadow: 0 2px 5px 1px rgba(0, 0, 0, 0.2);
+    text-align: center;
+  }
+  input {
+    margin: 40px auto;
+    width: 25vw;
+    display: block;
+    border: none;
+    padding: 10px 0;
+    border-bottom: solid 1px $color;
+    transition: all 0.3s cubic-bezier(.64, .09, .08, 1);
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 96%, $color 4%);
+    background-position: -25vw 0;
+    background-size: 25vw 100%;
+    background-repeat: no-repeat;
+    color: darken($color, 20%);
+    &:focus,
+    &:valid {
+      box-shadow: none;
+      outline: none;
+      background-position: 0 0;
+      &::-webkit-input-placeholder {
+        color: $color;
+        font-size: 11px;
+        transform: translateY(-20px);
+        visibility: visible !important;
+      }
+    }
+  }
+  button {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    border: none;
+    background-color: #cdb77d;
+    cursor: pointer;
+    border-radius: 3px;
+    padding: 6px;
+    width: 10vw;
+    color: $color;
+    margin-left: auto;
+    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
+    &:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.2);
+    }
   }
 }
